syn-state-machine/src/impls/snapshots/syn_state_machine__impls__typed_literal__tests__it_matches_float.snap
---
source: syn-state-machine/src/impls/typed_literal.rs
expression: "crate::parse::<FloatLit>(::quote::quote! { 0.0 })"
---
Ok(
    (
        FloatLit {
            raw: "0.0",
            end_integer_part: 1,
            end_fractional_part: 3,
            end_number_part: 3,
        },
        0,
    ),
)
