syn-state-machine/src/impls/snapshots/syn_state_machine__impls__typed_literal__tests__it_matches_int.snap
---
source: syn-state-machine/src/impls/typed_literal.rs
expression: "crate::parse::<IntegerLit>(::quote::quote! { 0 })"
---
Ok(
    (
        IntegerLit {
            raw: "0",
            start_main_part: 0,
            end_main_part: 1,
            base: Decimal,
        },
        0,
    ),
)
