syn-state-machine/src/impls/snapshots/syn_state_machine__impls__typed_literal__tests__it_matches_signed_float.snap
---
source: syn-state-machine/src/impls/typed_literal.rs
expression: "crate::parse::<SignedFloatLit>(::quote::quote! { - 0.0e10 })"
---
Ok(
    (
        (
            Some(
                FPunct,
            ),
            FloatLit {
                raw: "0.0e10",
                end_integer_part: 1,
                end_fractional_part: 3,
                end_number_part: 6,
            },
        ),
        0,
    ),
)
