syn-state-machine/src/impls/snapshots/syn_state_machine__impls__typed_literal__tests__it_matches_signed_int.snap
---
source: syn-state-machine/src/impls/typed_literal.rs
expression: "crate::parse::<SignedIntegerLit>(::quote::quote! { - 10 })"
---
Ok(
    (
        (
            Some(
                FPunct,
            ),
            IntegerLit {
                raw: "10",
                start_main_part: 0,
                end_main_part: 2,
                base: Decimal,
            },
        ),
        0,
    ),
)
